Fixes from PR review: panel title alignment, cleanup stale code, add color alias for toggle button

--- a/awx/ui/client/legacy-styles/job-details.less
+++ b/awx/ui/client/legacy-styles/job-details.less
@@ -202,7 +202,6 @@
     }
 
     #job_plays, #job_tasks {
-        // height: 150px;
         overflow-y: auto;
         overflow-x: none;
     }
@@ -317,10 +316,6 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-    }
-
-    #tasks-table-detail {
-        // height: 150px;
     }
 
     #play-section {
